Bug 1855544: Don't log a debug warning when URLQueryStringStripper::CheckAllowList is given an ip-address URI. r=pbz,anti-tracking-reviewers

This patch doesn't change behavior.

When we hit this code with an ip-address URI, our call to GetBaseDomain() fails
with NS_ERROR_HOST_IS_IP_ADDRESS. This makes sense, since IP addresses aren't
domain names and don't have a "base domain" that could be extracted.

Rather than taking the NS_ENSURE_SUCCESS warning-spam-inducing return path for
this scenario, let's take the other equivalent no-warning return path.

Differential Revision: https://phabricator.services.mozilla.com/D189419