toolkit/components/antitracking/URLQueryStringStripper.cpp
@@ -334,7 +334,8 @@ bool URLQueryStringStripper::CheckAllowList(nsIURI* aURI) {
   nsAutoCString baseDomain;
   nsresult rv =
       nsEffectiveTLDService::GetInstance()->GetBaseDomain(aURI, 0, baseDomain);
-  if (rv == NS_ERROR_INSUFFICIENT_DOMAIN_LEVELS) {
+  if (rv == NS_ERROR_HOST_IS_IP_ADDRESS ||
+      rv == NS_ERROR_INSUFFICIENT_DOMAIN_LEVELS) {
     return false;
   }
   NS_ENSURE_SUCCESS(rv, false);
